Fix navbar logo and notifs on smaller screens

--- a/src/components/Branding/Branding.module.scss
+++ b/src/components/Branding/Branding.module.scss
@@ -54,6 +54,15 @@
       height: 32px;
     }
 
+
+    .logoBig {
+      background-image: var(--logo);
+      background-size: contain;
+      margin-right: 10px;
+      width: 32px;
+      height: 32px;
+    }
+
     span {
       display: none;
     }
