--- a/src/components/NavLink/NavLink.module.scss
+++ b/src/components/NavLink/NavLink.module.scss
@@ -157,6 +157,7 @@
   .bubble {
     width: 8px;
     height: 8px;
+    min-width: 8px;
     >div {
       display: none;
     }
